--- a/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.scss
+++ b/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.scss
@@ -1,4 +1,5 @@
 
+@import "~@ng-select/ng-select/themes/default.theme.css";
 .has-error{
     border: 1px solid red !important;
 }
@@ -6,7 +7,7 @@
     background: #000;
     color: #fff;
 }
-.table-wrap {
+.add-user-popup .table-wrap {
     height: auto;
     overflow: auto;
     border-bottom: 1px solid #ddd;
@@ -14,7 +15,7 @@
     width: 80%;
     margin-left: 10%;
 }
-.table-head {
+.add-user-popup .table-head {
     background: #000;
     color: #fff;
     padding: 8px;
