--- a/src/app/featured/dashbord/component/side-navigation/side-navigation.component.css
+++ b/src/app/featured/dashbord/component/side-navigation/side-navigation.component.css
@@ -18,3 +18,6 @@ opacity: 1;
     opacity: 1;
 }
 
+.vertical-menu-item.heading.level-1.expanded:hover,.vertical-menu-item.heading.level-1.expanded:active {
+    outline: 2px auto #1e88e5 !important;
+}
