--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,25 +1,3 @@
-<!-- <header>
-  <div class="left-wrap">
-    <div class="menu-icon">
-      <img src="../assets/img/menu-icon.png" class="openbtn" (click)="openNav()" alt="">
-    </div>
-    <div class="logo">
-      <img src="../assets/img/logo.svg" (click)="showDashbord()">
-    </div>
-  </div>
-  <section class="login">
-    <ul>
-      <li class="settings" *ngIf="!isSuperAdmin" (click)="openAdd()"><img src="../assets/img/settings-icon.svg"></li>
-      <li *ngIf="!isSuperAdmin" class="user-name">Hello, {{userDetails.user_name}}</li>
-      <li *ngIf="isSuperAdmin" class="user-name">Super Admin</li>
-      <li class="user-img"><img src="../assets/img/user-img.png" alt=""></li>
-      <li class="logout" (click)="logout()">Logout <img src="../assets/img/logout.svg"></li>
-    </ul>
-  </section>
-</header> -->
-
-
-
 <!--super admin login -->
 
 <app-add-popup *ngIf="showAdd" [fields]="addFormData" (formCancel)="cancelAdd($event)"
@@ -53,23 +31,17 @@
       <a *ngIf="!isSuperAdmin" class="user-name">Hello, {{userDetails?.user_name}}</a>
       <a *ngIf="isSuperAdmin" class="user-name">Super Admin</a>
       <a>
-        <mat-icon role="img" class="mat-icon notranslate mat-icon-no-color user-icon" aria-hidden="true">
-          <img src="../assets/img/user-img.png" alt="">
-          <div class="drop-menu-wrap">
-            <div class="drop-menu">
-              <a class="dropdown-item" href="#">Link 1</a>
-              <a class="dropdown-item" href="#">Link 2</a>
-              <a class="dropdown-item" href="#">Link 3</a>
+        <div ngbDropdown class="d-inline-block">
+          <button class="user-img" ngbDropdownToggle></button>
+          <div ngbDropdownMenu>
+            <div ngbDropdownItem (click)="logout()">
+              Logout
+              <span class="material-icons icon-style"> exit_to_app </span>
             </div>
           </div>
-        </mat-icon>
+        </div>
       </a>
-      <a>
-        <mat-icon (click)="logout()" role="img" class="mat-icon notranslate mat-icon-no-color curser-point"
-          aria-hidden="true">
-          <span class="material-icons"> exit_to_app </span>
-        </mat-icon>
-      </a>
+
     </div>
     <!--  -->
   </mat-toolbar-row>
