--- a/src/app/featured/dashbord/component/company/company.component.html
+++ b/src/app/featured/dashbord/component/company/company.component.html
@@ -13,11 +13,11 @@
       <thead>
         <tr>
           <th class="curser-point" (click)="sort('id')" style="width: 10%;"> Id </th>
-          <th class="curser-point" (click)="sort('CompanyName')" style="width: 10%;"> Name </th>
+          <th class="curser-point" (click)="sort('CompanyName')" style="width: 20%;"> Name </th>
           <th class="curser-point" (click)="sort('Address1')" style="width: 20%;"> Address </th>
           <th class="curser-point" (click)="sort('MobileNo')" style="width: 20%;"> Mobile </th>
           <th class="curser-point" (click)="sort('Email')" style="width: 20%;"> Email </th>
-          <th style="width: 20%;">Operation</th>
+          <th style="width: 10%;">Operation</th>
         </tr>
       </thead>
     </table>
@@ -26,11 +26,11 @@
         <tbody>
           <tr *ngFor="let item of companies | orderBy: {property: column, direction: direction}">
             <td class="curser-point" (click)="openView(item)" style="width: 10%;">{{item.id}}</td>
-            <td class="curser-point" (click)="openView(item)" style="width: 10%;">{{item.CompanyName}}</td>
+            <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.CompanyName}}</td>
             <td style="width: 20%;">{{item.Address1}}</td>
             <td style="width: 20%;">{{item.MobileNo}}</td>
             <td style="width: 20%;">{{item.Email}}</td>
-            <td class="btn-wrap">
+            <td style="width: 10%;">
               <app-buttons [data]='item' (onRemove)="openDelete($event)" (onEdit)="openEdit($event)"></app-buttons>
             </td>
           </tr>
