--- a/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="form-group-wrap row">
-                        <div class="col col-sm-4 label astrick">
+                        <div class="col col-sm-4 label astrick move-item">
                             System Error Account
                         </div>
                         <div class="col col-sm-6 label">
