--- a/src/app/featured/dashbord/component/details-popups/chain-details/chain-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/chain-details/chain-details.component.html
@@ -96,8 +96,7 @@
               </div>
               <div class="col col-sm-5 file-upload-wrap">
                 <label class="btn-upload">
-                  <!-- <input type="file" name="fileupload" disabled> -->
-                  <img class="btn" [src]="imgUrl">
+                  <img class="image-uploaded" [src]="imgUrl">
                 </label>
                 <p class="file-name" *ngIf="imageName">{{imageName}}</p>
               </div>
