--- a/src/app/featured/dashbord/component/details-popups/normal-user/normal-user.component.html
+++ b/src/app/featured/dashbord/component/details-popups/normal-user/normal-user.component.html
@@ -87,8 +87,7 @@
               </div>
               <div class="col col-sm-5 file-upload-wrap">
                 <label class="btn-upload">
-                  <input type="file" name="fileupload" (change)="fileProgress($event)" accept="image/*">
-                  <img class="btn" [src]="imgUrl">
+                  <img class="image-uploaded" [src]="imgUrl">
                 </label>
 
               </div>
