--- a/src/app/featured/dashbord/component/details-popups/company-details/company-details.component.html
+++ b/src/app/featured/dashbord/component/details-popups/company-details/company-details.component.html
@@ -236,7 +236,7 @@
               <div class="flex-wrap">
                 <div class="upload file-upload-wrap">
                   <label class="btn-upload">
-                    <img class="btn" src="../assets/img/upload.png">
+                    <img class="image-uploaded" [src]="imgUrl">
                   </label>
                   <p class="file-name" *ngIf="imageName">{{imageName}}</p>
                 </div>
