--- a/src/app/featured/dashbord/component/details-popups/company-details/company-details.component.css
+++ b/src/app/featured/dashbord/component/details-popups/company-details/company-details.component.css
@@ -1,3 +1,19 @@
 .btn-upload{
     margin-top: 20px;
 }
+li{
+    padding: 0px;
+}
+.nav-link {
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+}
+.nav-tabs.nav-link:hover {
+    border-color: #e9ecef #e9ecef #dee2e6;
+}
+.nav-link:hover{
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+}
