--- a/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.scss
+++ b/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.scss
@@ -38,3 +38,19 @@
     padding: 0px;
     padding-left: 14px;
 }
+li{
+    padding: 0px;
+}
+.nav-link {
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+}
+.nav-tabs.nav-link:hover {
+    border-color: #e9ecef #e9ecef #dee2e6;
+}
+.nav-link:hover{
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+}
