--- a/src/app/shared/components/edit-delete-buttons/edit-delete-buttons.component.html
+++ b/src/app/shared/components/edit-delete-buttons/edit-delete-buttons.component.html
@@ -1,2 +1,2 @@
-<span class="material-icons curser-point" (click)="openEdit()"> edit </span>
-<span class="material-icons curser-point" (click)="openDelete()"> remove_circle_outline </span>
+<span class="material-icons curser-point border-class" (click)="openEdit()"> edit </span>
+<span class="material-icons curser-point border-class" (click)="openDelete()"> delete_forever</span>
