--- a/src/app/featured/dashbord/component/user/user.component.html
+++ b/src/app/featured/dashbord/component/user/user.component.html
@@ -15,7 +15,7 @@
           <th class="curser-point" (click)="sort('user_name')" style="width: 15%;">Name </th>
           <th class="curser-point" (click)="sort('user_phone')" style="width: 20%;">Mobile </th>
           <th class="curser-point" (click)="sort('user_email')" style="width: 25%;">Email </th>
-          <th class="curser-point" (click)="sort('UDID')" style="width: 10%;">UUID </th>
+          <!-- <th class="curser-point" (click)="sort('UDID')" style="width: 10%;">UUID </th> -->
           <th class="curser-point" (click)="sort('LoginPin')" style="width: 10%;">Login Pin </th>
           <th style="width: 10%;">Operation</th>
         </tr>
@@ -29,7 +29,7 @@
             <td class="curser-point" (click)="openView(item)" style="width: 15%;">{{item.user_name}}</td>
             <td style="width: 20%;">{{item.user_phone}}</td>
             <td style="width: 25%;">{{item.user_email}}</td>
-            <td style="width: 10%;">{{item.UDID}}</td>
+            <!-- <td style="width: 10%;">{{item.UDID}}</td> -->
             <td style="width: 10%;">{{item.LoginPin}}</td>
             <td style="width: 10%;">
               <app-buttons [data]='item' (onRemove)="openDelete($event)" (onEdit)="openEdit($event)"></app-buttons>
