--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -28,7 +28,7 @@
           <img src="../assets/img/settings-icon.svg">
         </mat-icon>
       </a>
-      <a *ngIf="!isSuperAdmin" class="user-name">Hello, {{userDetails?.user_name}}</a>
+      <a *ngIf="!isSuperAdmin" class="user-name">Hi, {{userDetails?.user_name}}</a>
       <a *ngIf="isSuperAdmin" class="user-name">Super Admin</a>
       <a>
         <mat-icon role="img" class="mat-icon notranslate mat-icon-no-color" aria-hidden="true">
