--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3638,7 +3638,7 @@ a {
     font-weight: 400;
     color: #fff;
     font-family: Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
-    text-transform: uppercase
+    /* text-transform: uppercase */
 }
 
 strong {
