dashbord address changes

--- a/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
@@ -53,7 +53,7 @@
 
                         </div>
 
-                        <div class="form-group-wrap row">
+                        <div class="form-group-wrap row remove-borrom-padding">
                             <div class="col-6 col-md-4">
                                 <div class="checkbox">
                                     <label>
@@ -67,12 +67,12 @@
 
                         </div>
 
-                        <div class="form-group-wrap row">
+                        <!-- <div class="form-group-wrap row">
                             <div class="col-6 col-md-8">
 
                             </div>
                             <div class="col-6 col-md-4"></div>
-                        </div>
+                        </div> -->
                         <div class="form-group-wrap row">
                             <div class="col-6 col-md-8">
                                 <div class="checkbox">
