--- a/src/app/featured/dashbord/component/dashbord/dashbord.component.html
+++ b/src/app/featured/dashbord/component/dashbord/dashbord.component.html
@@ -29,7 +29,7 @@
       </div>
       <div class="box-wrap col-sm-4">
         <h2>Head Office</h2>
-        <p>Wadia International Centre, Pandurang Budhkar Marg, Worli, Mumbai - 400 025.</p>
+        <p>{{dashboardData?.company_address}}</p>
       </div>
     </div>
   </section>
@@ -64,10 +64,7 @@
           </ul>
         </div>
       </div>
-      <div class="box-wrap col-sm-4">
-        <h2>Head Office</h2>
-        <p>Wadia International Centre, Pandurang Budhkar Marg, Worli, Mumbai - 400 025.</p>
-      </div>
+
     </div>
   </section>
 </section>
