--- a/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
@@ -54,7 +54,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group-wrap row">
-                                    <div class="col col-sm-4 label">
+                                    <div class="col col-sm-4 label astrick">
                                         Address1
                                     </div>
                                     <div class="col col-sm-6">
@@ -65,7 +65,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group-wrap row">
-                                    <div class="col col-sm-4 label">
+                                    <div class="col col-sm-4 label astrick">
                                         Address2
                                     </div>
                                     <div class="col col-sm-6">
