--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -105,3 +105,9 @@
 .home{
     padding: 7px 0px 0px 0px;
 }
+.logo-footer-text{
+    font-size: 14px;
+    margin-top: 11px;
+    margin-left: -17px;
+    margin-right: 12px;
+}
