--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -15,8 +15,9 @@
     </button>
 
     <a class="nav-link home">
-      <img src="../assets/img/Axis-Logo.png" (click)="showDashbord()" width="150" height="40" title="Home" alt="Home">
+      <img src="../assets/img/Axis-Logo.png" (click)="showDashbord()" width="125" height="40" title="Home" alt="Home">
     </a>
+    <span class="logo-footer-text">Business 365</span>
     <div class="search-container">
       <!-- <input type="search" aria-label="search" placeholder="Search" #SearchInput> -->
     </div>
