--- a/src/app/featured/dashbord/component/popups/add-normal-user/add-normal-user.component.html
+++ b/src/app/featured/dashbord/component/popups/add-normal-user/add-normal-user.component.html
@@ -22,7 +22,7 @@
               </div>
               <div class="col col-sm-5">
                 <div class="form-group">
-                  <input type="text" maxlength="6" class="form-control" formControlName="userid"
+                  <input type="text" numbersOnly maxlength="6" class="form-control" formControlName="userid"
                     [ngClass]="{ 'has-error': isSubmitted && formControls.userid.errors }">
                 </div>
               </div>
