--- a/src/app/featured/dashbord/component/popups/add-normal-user/add-normal-user.component.html
+++ b/src/app/featured/dashbord/component/popups/add-normal-user/add-normal-user.component.html
@@ -83,7 +83,7 @@
               <div class="col col-sm-5 file-upload-wrap">
                 <label class="btn-upload">
                   <input type="file" name="fileupload" (change)="fileProgress($event)" accept="image/*">
-                  <img class="btn" [src]="imgUrl">
+                  <img class="image-uploaded" [src]="imgUrl">
                 </label>
                 <p class="file-name" *ngIf="imageName">{{imageName}}</p>
               </div>
